# igvf-cvfg-biobank

./: .gitignore  LICENSE  README.md  example_output.csv  file_format_specification.md  gene_metadata.txt  pyproject.toml  setup.py
cvfgaou/: aou.py  carrier_annotation.py  clinical_validation.py  cmd.py  data.py  gctools.py  hailcmd.py  hailtools.py  notation.py  odds.py  old_aou.py  plot.py  survival.py
cvgfaou/: aou.py
igvf-submit/: OR Estimates File Description.md  igvf-utils-env.yaml  submit.py
scripts/: Figures.R  README.md
scripts/R/: Extended_Data_Figure_2.R  Figure_6b.R
scripts/notebook-archive/: Build exposure tables for ClinVar 2025-01.ipynb  Build exposure tables for REVEL.ipynb  Build exposure tables for assay author labels.ipynb  Build exposure tables for rare variants.ipynb  Carrier tables for specific scores from Tejura.ipynb  Collate OR estimates.ipynb  Collect auxiliary variant statistics.ipynb  Collect notebooks for archive.ipynb  Figures.ipynb  Make Long QT Case and Control Pools.ipynb  OR estimates for MutPred2.ipynb  OR estimates for predictors.ipynb  OR estimates.ipynb  Per-gene VAT import.ipynb  Prepare control pools for loading.ipynb  Prepare environment.ipynb  README.ipynb
scripts/scalable-vep/: README.md
scripts/scalable-vep/R/: Figure_2i.R
scripts/scalable-vep/archive/: Build carrier tables for combined scores.ipynb  Build exposure tables for 2025-12-08 assay calibrations.ipynb  Build exposure tables for AlphaMissense.ipynb  Build exposure tables for ClinVar (VAT).ipynb  Figures.R  (+2 more)
scripts/scalable-vus/: README.md  analysis.wdl
(+11 files in other folders)
